components/ai-models-service/base/cluster-namespace-ai-models-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    kubernetes.io/metadata.name: ai-models-service
    opendatahub.io/dashboard: "true"
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
  name: ai-models-service
