components/ai-models-service/base/ai-models-service-route-granite-llm.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 30s
  labels:
    inferenceservice-name: granite-llm
  name: granite-llm
  namespace: ai-models-service
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: granite-llm-predictor
    weight: 100
  wildcardPolicy: None
